--- a/算法/算法.md
+++ b/算法/算法.md
@@ -1,11 +1,18 @@
-#算法
+# 算法
 
-##算法可视化
-https://www.cs.usfca.edu/~galles/visualization/Algorithms.html
+## Roadmap
 
-https://algorithm-visualizer.org/
+![roadmap](https://pic1.zhimg.com/80/v2-f221b3de2a863b53ef0cb75fec879d72_720w.jpg)
+这张图包含10个数据结构：数组、链表、栈、队列、散列表、二叉树、堆、跳表、图、Trie 树；10个算法：递归、排序、二分查找、搜索、哈希算法、贪心算法、分治算法、回溯算法、动态规划、字符串匹配算法。
 
-##排序算法
+## 算法可视化
+
+<https://www.cs.usfca.edu/~galles/visualization/Algorithms.html>
+
+<https://algorithm-visualizer.org/>
+
+## 排序算法
+
 `NOTE:` 以一个长度有限的随机整数列，从小到大进行排序来讲解.
 
 **选择排序(select sort):** 遍历所有整数, 找到最小数, 与第一个整数互换, 再从第二个数开始找到最小数, 与第二个数互换, 依此类推, 直到结束.
@@ -21,3 +28,7 @@ https://algorithm-visualizer.org/
 **堆排序(heap sort):**
 
 **桶排序(bucket sort):**
+
+## 参考内容
+
+<https://www.zhihu.com/question/20588261/answer/926157817>
